[gd_scene load_steps=18 format=3 uid="uid://btrw7gm53yrcs"]

[ext_resource type="Script" uid="uid://dus15ltfttjix" path="res://scripts/ui/menu_screens/scenario_selector.gd" id="1_thtvt"]
[ext_resource type="Texture2D" uid="uid://cy44p0ysltcgn" path="res://assets/nueva_interfaz/Icon_Izquierda.svg" id="2_2fmkx"]
[ext_resource type="Material" uid="uid://tjlab8kl611m" path="res://resource/shaders_materials/main_menu.tres" id="2_apcuy"]
[ext_resource type="Texture2D" uid="uid://4i6b8f2vicd3" path="res://assets/backgrounds/menu/up_center.jpg" id="2_ixdqn"]
[ext_resource type="Script" uid="uid://bh6qjmta86c8k" path="res://scripts/ui/carousel_container.gd" id="3_citkk"]
[ext_resource type="Texture2D" uid="uid://cmmka6i2yamfu" path="res://assets/nueva_interfaz/Icon_Derecha_Activado.svg" id="3_tvxaw"]
[ext_resource type="Script" uid="uid://jg177wchcmuh" path="res://scripts/ui/carousel_node.gd" id="4_2fmkx"]
[ext_resource type="Texture2D" uid="uid://o7jsliaiabo" path="res://assets/nueva_interfaz/Icon_Derecha.svg" id="4_cjpp7"]
[ext_resource type="Texture2D" uid="uid://bnekcffjwfebp" path="res://assets/nueva_interfaz/Icon_Izquierda_Activado.svg" id="5_4vt5r"]
[ext_resource type="Texture2D" uid="uid://c75vyykpuo21l" path="res://assets/nueva_interfaz/Boton_Menu_Opciones.svg" id="6_cjpp7"]
[ext_resource type="Texture2D" uid="uid://csf8i8nbxw1n6" path="res://assets/nueva_interfaz/Boton_Menu_Opciones_Activado.svg" id="7_4vt5r"]
[ext_resource type="Script" uid="uid://djl4knccepaso" path="res://scripts/nodes/animated_texture_button.gd" id="10_2n2iv"]
[ext_resource type="Texture2D" uid="uid://cqut15hl54bqu" path="res://assets/nueva_interfaz/Icon_Cerrar.svg" id="10_3yw50"]
[ext_resource type="Theme" uid="uid://ckm5gw1dv6pnl" path="res://resource/styles/settings.tres" id="10_a2okb"]
[ext_resource type="Script" uid="uid://b7c8g1uo4jfaq" path="res://scripts/nodes/animated_button.gd" id="11_2n2iv"]
[ext_resource type="FontFile" uid="uid://oha0sxnndksa" path="res://assets/fonts/NunitoSans-VariableFont_YTLC,opsz,wdth,wght.ttf" id="11_sy41y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yw50"]
bg_color = Color(1, 0.83137256, 0.5294118, 1)
border_width_left = 10
border_width_right = 10
border_color = Color(0.5590922, 0.40024453, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="ScenarioSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_thtvt")

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource("2_apcuy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ixdqn")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 240
theme_override_constants/margin_right = 240
theme_override_constants/margin_bottom = 0

[node name="Left" type="TextureButton" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("2_2fmkx")
texture_pressed = ExtResource("3_tvxaw")
ignore_texture_size = true
stretch_mode = 5

[node name="Right" type="TextureButton" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("4_cjpp7")
texture_pressed = ExtResource("5_4vt5r")
ignore_texture_size = true
stretch_mode = 5

[node name="Return" type="TextureButton" parent="MarginContainer"]
custom_minimum_size = Vector2(450, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource("6_cjpp7")
texture_pressed = ExtResource("7_4vt5r")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("10_2n2iv")
metadata/_custom_type_script = "uid://djl4knccepaso"

[node name="Label" type="Label" parent="MarginContainer/Return"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Volver al menu"

[node name="PanelContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 80

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3yw50")

[node name="CloseMenu" type="Button" parent="PanelContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
icon = ExtResource("10_3yw50")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("11_2n2iv")
metadata/_custom_type_script = "uid://b7c8g1uo4jfaq"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleScenario" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("10_a2okb")
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("11_sy41y")
theme_override_font_sizes/font_size = 46
text = "nombre escenario"
horizontal_alignment = 1

[node name="DescriptionScenario" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 22
text = "Placeholder"
autowrap_mode = 2
horizontal_alignment = 1

[node name="CarouselContainer" type="Node2D" parent="." node_paths=PackedStringArray("position_offset_node")]
z_index = 1
position = Vector2(576, 280)
script = ExtResource("3_citkk")
spacing = 38.54
opacity_strength = 0.25
scale_strength = 0.4
position_offset_node = NodePath("CarouselNode")

[node name="CarouselNode" type="Control" parent="CarouselContainer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -270.0
offset_right = -270.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_2fmkx")

[connection signal="pressed" from="MarginContainer/Left" to="CarouselContainer" method="_on_left_pressed"]
[connection signal="pressed" from="MarginContainer/Right" to="CarouselContainer" method="_on_right_pressed"]
[connection signal="pressed" from="MarginContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="PanelContainer/CloseMenu" to="." method="_on_close_menu_pressed"]
